# frankenpanel

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  README.md
.github/workflows/: build-image.yml  build-release-tarball.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  audit.py  auth.py  backups.py  databases.py  domains.py  sites.py  users.py
backend/app/core/: audit.py  config.py  database.py  middleware.py  permissions.py  security.py
backend/app/models/: __init__.py  audit.py  backup.py  database.py  domain.py  site.py  ssl.py  user.py
backend/app/schemas/: __init__.py  audit.py  backup.py  database.py  domain.py  site.py  user.py
backend/app/services/: __init__.py  backup_service.py  caddy_service.py  database_service.py  domain_service.py  frankenphp_service.py  site_service.py  user_service.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  DEPLOYMENT.md  DEVELOPER.md  SECURITY.md  SITE_ORCHESTRATION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AuditLogs.tsx  Backups.tsx  Dashboard.tsx  Databases.tsx  Domains.tsx  Login.tsx  SiteDetail.tsx  Sites.tsx  Users.tsx
frontend/src/services/: api.ts
scripts/: create-admin.sh  diagnose-502.sh  install.sh
