[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frankenpanel"
version = "1.0.0"
description = "Open-source multi-site management system for PHP apps running on FrankenPHP, with FastAPI backend and MySQL/PostgreSQL orchestration."
requires-python = ">=3.12"
dependencies = []

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
